--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
--cikit-learn @ file:///C:/ci/scikit-learn_1592853510272/work
+scikit-learn @ file:///C:/ci/scikit-learn_1592853510272/work
 absl-py==0.10.0
 alabaster==0.7.12
 anaconda-client==1.7.2
