--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ icd10-cm==0.0.4
 icd9cms==0.2.1
 gunicorn==20.1.0
 scipy==1.7.0
-conda==1.7.2
+joblib @ https://pypi.python.org/pypi/joblib#downloads
 Werkzeug==1.0.1
