--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,5 @@ icd10-cm==0.0.4
 icd9cms==0.2.1
 gunicorn==20.1.0
 scipy==1.7.0
-joblib @ git://github.com/joblib/joblib.git
+joblib @ git+https://github.com/joblib/joblib.git
 Werkzeug==1.0.1
