--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ gunicorn==20.1.0
 scipy==1.7.0
 joblib @ git+https://github.com/joblib/joblib.git
 Werkzeug==1.0.1
-psycopg2-binary==2.8.6
+scikit-learn==0.24.2
