--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 Flask==1.1.2
 pandas>=0.25.1
 regex==2021.7.6
-gunicorn=20.0.4
 requests==0.11.1
 icd10-cm==0.0.4
 icd9cms==0.2.1
+gunicorn==20.1.0
 scipy==1.7.0
+joblib @ git+https://github.com/joblib/joblib.git
 Werkzeug==1.0.1
+scikit-learn==0.24.2
